@@ -102,9 +102,7 @@ export(
     ncdfSubset,
     ncdfSubsetCheck,
     pedigreeCheck,
-    pedigreeClean,
     pedigreeDeleteDuplicates,
-    pedigreeFindDuplicates,
     pedigreeMaxUnrelated,
     pedigreePairwiseRelatedness,
     plinkCheck,
